--- a/webroot/movie_heaven/apps/MovieHeaven/MovieHeaven.plist
+++ b/webroot/movie_heaven/apps/MovieHeaven/MovieHeaven.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://www.gallifrey.cn/movie_heaven/apps/MovieHeaven.ipa</string>
+					<string>https://www.gallifrey.cn/movie_heaven/apps/MovieHeaven/MovieHeaven.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -35,7 +35,7 @@
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>????</string>
+				<string>MovieHeaven</string>
 			</dict>
 		</dict>
 	</array>
