--- a/webroot/movie_heaven/apps/MovieHeaven/MovieHeaven.plist
+++ b/webroot/movie_heaven/apps/MovieHeaven/MovieHeaven.plist
@@ -35,7 +35,7 @@
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>MovieHeaven</string>
+				<string>观影天堂</string>
 			</dict>
 		</dict>
 	</array>
